[package]
name = "intervalle"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Parser for time range arguments"
homepage = "https://github.com/spoutn1k/intervalle"
repository = "https://github.com/spoutn1k/intervalle"
readme = "README.md"
keywords = ["parser", "systemd", "cli"]
categories = ["date-and-time", "command-line-interface"]

[dependencies]
time = "0.3.36"
tz-rs = "0.6.14"
winnow = "0.6.18"
